Link to deployment guide instead of duplicating the start command